book/tests/snapshots/snapshot__tests__prql__transforms__aggregate-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive [avg_sal = average salary]\n"
---
from employees
derive [avg_sal = average salary]



