book/tests/snapshots/snapshot__tests__prql__transforms__append-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees_1\nappend employees_2\n"
---
from employees_1
append employees_2



