book/tests/snapshots/snapshot__tests__prql__transforms__append-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees_1\nremove employees_2\n"
---
from employees_1
remove employees_2



