book/tests/snapshots/snapshot__tests__prql__transforms__append-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees_1\nintersect employees_2\n"
---
from employees_1
intersect employees_2



