book/tests/snapshots/snapshot__tests__prql__transforms__filter-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter age > 25\n"
---
from employees
filter age > 25



