book/tests/snapshots/snapshot__tests__prql__transforms__filter-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter (age > 25 or department != \"IT\")\n"
---
from employees
filter age > 25 or department != "IT"



