book/tests/snapshots/snapshot__tests__prql__transforms__filter-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter (age | in 25..40)\n"
---
from employees
filter (
  age
  in 25..40
)



