book/tests/snapshots/snapshot__tests__prql__transforms__group-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nsort join_date\ntake 1\n"
---
from employees
sort join_date
take 1



