book/tests/snapshots/snapshot__tests__prql__transforms__group-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\ngroup role (\n  sort join_date  # taken from above\n  take 1\n)\n"
---
from employees
group role (
  sort join_date
  take 1
)



